--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     <div id="map"></div>
     <script>
         const map = L.map('map').setView([40.07769949211596, -104.80568661655633], 6);
-        /*L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }).addTo(map);*/
-        L.tileLayer('http://localhost:3000/raster-tiles/{z}/{x}/{y}.png', {
+        }).addTo(map);
+        /* L.tileLayer('http://localhost:3000/raster-tiles/{z}/{x}/{y}.png', {
             maxZoom: 6,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }).addTo(map);
+        }).addTo(map); */
         const vectorTiles = L.vectorGrid.protobuf("http://localhost:3000/raster-tiles/{z}/{x}/{y}.png", {
             vectorTileLayerStyles: {
                 buowl_habitat: {
