--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="map"></div>
     <script>
-        const map = L.map('map').setView([40.07769949211596, -104.80568661655633], 6);
+        const map = L.map('map').setView([40.07769949211596, -104.80568661655633], 16);
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -27,9 +27,9 @@
             maxZoom: 6,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map); */
-        const vectorTiles = L.vectorGrid.protobuf("http://localhost:3000/raster-tiles/{z}/{x}/{y}.png", {
+        const vectorTiles = L.vectorGrid.protobuf("http://localhost:3000/tiles/{z}/{x}/{y}.pbf", {
             vectorTileLayerStyles: {
-                buowl_habitat: {
+                parcels: {
                     weight: 1,
                     fillColor: '#9bc2c4',
                     fillOpacity: 0.5,
@@ -42,7 +42,7 @@
             maxZoom: 19,
             interactive: true,
             getFeatureId: function(f) {
-                return f.properties.habitat_id;
+                return f.properties.PARCELNUM;
             }
         })
         .addTo(map);
@@ -53,7 +53,7 @@
             if (selectedFeatureId) {
                 vectorTiles.resetFeatureStyle(selectedFeatureId);
             }
-            selectedFeatureId = e.layer.properties.habitat_id.toString();
+            selectedFeatureId = e.layer.properties.PARCELNUM.toString();
             L.popup()
                 .setContent(selectedFeatureId)
                 .setLatLng(e.latlng)
